[package]
name = "deno_in_deno"
version = "0.1.0"
authors = ["andy <andyfinch7@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
deno = { path = "../../deno/core" }

tokio = "0.1.21"
serde_json = "1.0.39"
serde = { version = "1.0", features = ["derive"] }
futures-preview = { version = "=0.3.0-alpha.16", features = ["async-await", "nightly", "compat"] }
lazy_static = "1.3.0"