[package]
name = "deno_in_deno"
version = "0.1.0"
authors = ["andy <andyfinch7@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
deno = { path = "../../deno/core" }

tokio = { version = "0.2.0", git = "https://github.com/tokio-rs/tokio", rev = "0d99ddd4f4adfb3ee099a5eefaea529200afcbd1" }
serde_json = "1.0.39"
serde = { version = "1.0", features = ["derive"] }
futures-preview = { version = "=0.3.0-alpha.17", features = ["compat"] }
lazy_static = "1.3.0"
url = "1.7.2"