[package]
name = "test_dispatcher"
version = "0.1.0"
authors = ["afinch7 <andyfinch7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
deno_core = "0.30.1"
deno_dispatch_json = { path = "../std/plugins/dispatch_json" }
deno_in_deno = { path = "../plugin" }

serde_json = "1.0.39"
serde = { version = "1.0", features = ["derive"] }
futures-preview = { version = "=0.3.0-alpha.17", features = ["compat"] }
lazy_static = "1.3.0"